# grobid

./: main.py  test.tei
grobid/: pyproject.toml
grobid/grobid/: types.py
grobid/grobid/models/: article.py
